# filetreesubs

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  lint-all.sh  lint-flake8.sh  lint-pylint.sh  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python.yml  pythonlinters.yml
.reuse/: dep5
filetreesubs/: __init__.py  __main__.py  subs.py  utils.py
src/filetreesubs/: __init__.py  __main__.py  subs.py  utils.py
tests/functional/: .gitignore  baseline-base.yaml  baseline-full.yaml  baseline-index.yaml  build-baseline.sh  test_baseline.py
tests/functional/baseline-base-source/: index.html
tests/functional/baseline-full/: index.html  test.txt
tests/functional/baseline-full-source/: index.html  menu.inc  testimonials.inc
tests/functional/baseline-full-source/sub/: foo.html
tests/functional/baseline-full/sub/: foo.html  index.html
