[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "filetreesubs"
version = "1.1.0"
description = "Synchronize a file tree with text file substitutions"
authors = ["Felix Fontein <felix@fontein.de>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/felixfontein/filetreesubs"
packages = [
    { include = "filetreesubs" },
]

[tool.poetry.urls]
"Bug tracker" = "https://github.com/felixfontein/filetreesubs/issues"

[tool.poetry.scripts]
filetreesubs = "filetreesubs.__main__:main"

[tool.poetry.dependencies]
python = "^2.7.0 || ^3.5.0"
doit = ">=0.28.0"
setuptools = ">=20.3"
PyYAML = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
pylint = "*"
mypy = "*"
mock = "*"

[tool.isort]
line_length = 100
multi_line_output = 0
balanced_wrapping = true
